# porthole

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  porthole.service
.github/workflows/: ci.yml  release.yml  warm-cache.yml
config/: client.example.toml  server.example.toml
deploy/digitalocean/: cloud-init.yaml
docker/: entrypoint.sh
scripts/: setup-docker-server.sh  update-porthole-client-service.bat  update-porthole-server.sh
src/: auth.rs  banner.rs  cli.rs  client.rs  config.rs  diagnostics.rs  invite.rs  lib.rs  logging.rs  main.rs  net.rs  protocol.rs  server.rs  service.rs  tcp.rs  tls.rs  tui.rs  udp.rs  web.rs
src/service/: windows.rs
src/static/: index.html
tests/: e2e.rs
