[package]
name = "porthole"
version = "0.1.1"
edition = "2021"
description = "Self-hosted TCP/UDP tunneling & relay service (a simple, self-hosted ngrok/playit.gg/bore alternative)"
license = "MIT"
repository = "https://github.com/"
readme = "README.md"

[[bin]]
name = "porthole"
path = "src/main.rs"

[dependencies]
# Async runtime + framing
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
bytes = "1"
futures = "0.3"

# CLI / config / serialization
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Web UI (client)
axum = "0.8"

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"

# Ids / concurrency / misc
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
subtle = "2"
socket2 = "0.5"
rand = "0.8"
base64 = "0.22"

# TLS (ring crypto provider for clean Windows/musl builds)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2"
windows-service = "0.8.1"

[profile.release]
strip = true
lto = "thin"
